# Pokeverse

./: .gitignore  CMakeLists.txt  LICENCE  README.md  cmp.sh
src/: main.cpp  server.cpp  sha526.cpp
src/enc/: seasoning.cpp  sha526.cpp
src/include/: game.hpp  player.hpp  sha526.hpp
src/include/enc/: seasoning.hpp  sha526.hpp
